get ratings for all businesses, minor styling

--- a/src/inject/inject.css
+++ b/src/inject/inject.css
@@ -1,3 +1,13 @@
 /**
  * Place your custom CSS styles here.
  **/
+.yfm-star-container {
+	min-height: 25px;
+	min-width: 1px;
+	color: #6f6b6b;
+	padding-top: 3px;
+}
+
+.yfm-star-review-count {
+	margin-left: .5em;
+}
